--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "start": "node dist/index.js",
+    "postinstall": "tsc",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc -w",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+  },
+  "engines": { "node": "16.13.0" }
 }
