--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsdom": "^18.1.0",
     "memory-cache": "^0.2.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.1.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.8"
