--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@types/node-cron": "^3.0.1",
+    "@types/random-useragent": "^0.3.1",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.10",
@@ -17,8 +19,12 @@
     "io-ts": "^2.2.16",
     "jsdom": "^18.1.0",
     "memory-cache": "^0.2.0",
+    "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.0",
     "node-fetch": "^3.1.0",
+    "p-limit": "^4.0.0",
+    "random-useragent": "^0.5.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.8"
