--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 API_URL = "http://www.nettruyenpro.com/"
 PORT = 8000
 SERVER_URL = "http://localhost:8000/api/v1"
+DB_NAME = "test"
+DB_USERNAME = "hahunavth"
+DB_PASSWORD = "????????????????????????"
