--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/random-useragent": "^0.3.1",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
+    "chalk": "^5.0.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "dotenv": "^10.0.0",
+    "draftlog": "^1.0.13",
     "express": "^4.17.1",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
