--- a/package.json
+++ b/package.json
@@ -33,14 +33,19 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsdom": "^16.2.13",
     "@types/memory-cache": "^0.2.1",
+    "@types/mocha": "^9.1.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
@@ -52,6 +57,7 @@
     "watch-node": "nodemon dist/index.js",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git push heroku master",
-    "dev": "nodemon --watch './**/*.ts' --exec 'node --loader ts-node/esm ' index.ts "
+    "dev": "nodemon --watch './**/*.ts' --exec 'node --loader ts-node/esm ' index.ts ",
+    "test": "NODE_ENV=test node ./node_modules/mocha/bin/mocha --loader=ts-node/esm --extension ts ./src/tests/*.ts --exit"
   }
 }
