Add: Suggest Search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "authorname",
-    "cmchapter",
-    "datednf",
-    "mcache"
-  ]
+  "cSpell.words": ["ashx", "authorname", "cmchapter", "datednf", "mcache"]
 }
