--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/axios": "^0.14.0",
     "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
     "@types/jsdom": "^16.2.13",
     "@types/memory-cache": "^0.2.1",
@@ -45,6 +46,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "date-fns": "^2.28.0",
     "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
