use gzip compression

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-API_URL = "http://www.nettruyenpro.com/"
+API_URL = "http://www.nettruyenmoi.com/"
 PORT = 8000
 SERVER_URL = "http://localhost:8000/api/v1"
 DB_NAME = "test"
