--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["ashx", "authorname", "cmchapter", "datednf", "mcache"]
+  "cSpell.words": [
+    "ashx",
+    "authorname",
+    "cmchapter",
+    "datednf",
+    "draftlog",
+    "hahunavth",
+    "mcache"
+  ]
 }
