--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^5.0.0",
     "cheerio": "^1.0.0-rc.10",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "dotenv": "^10.0.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/chai": "^4.3.0",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
